# itzmechandruganeshan.github.io

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
assets/: index-7ruFOnWJ.css  index-9qPOaocs.js  index-BBJ2VYyU.js  index-BMyBFCmA.css  index-BhhclXdh.js  index-BsFP5R4a.js  index-C0PJjQoJ.css  index-D7yDmH2Q.js  index-DcDLQEZg.js  index-DuXujprS.js  index-RYTnC4e5.css  index-VFByGEwe.js  index-dLu2jVnR.js  index-eShcs2AF.css  index-ef-IKHzU.js  (+2 more)
backend/: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  ingest.py  pyproject.toml  test_or.py  test_orchestrator.py
backend/app/: config.py  database.py  graph.py  llm.py  main.py  memory.py  orchestrator.py  schemas.py  session.py  tools.py  websocket.py
backend/app/agents/: composer.py  router.py
backend/app/prompts/: system.txt
backend/app/retrieval/: ingestor.py  vector_store.py
backend/evaluation/: question_bank.py  run_eval.py
backend/knowledge/communication/: personality.md  writing_style.md
backend/knowledge/interview/: behavioral.md  system_design.md  technical.md
backend/knowledge/opinions/: agents.md  architecture.md  llms.md  rag.md
backend/knowledge/profile/: bio.md  education.md  experience.md
backend/knowledge/projects/: project_1.md  project_2.md  project_3.md  project_4.md
backend/knowledge/stories/: biggest_failure.md  hardest_bug.md  proudest_project.md
backend/persona/: communication_style.yaml  engineering_preferences.yaml  identity.yaml
backend/tests/: test_tools.py  test_websocket.py
src/: App.jsx
(+34 files in other folders)
