[project]
name = "portfolio-bot-backend"
version = "2.0.0"
description = "Lightweight portfolio chatbot backend — WebSocket + structured knowledge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.131.0",
    "fastembed>=0.8.0",
    "gitingest>=0.3.1",
    "httpx>=0.28.1",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1"
]
